add linting to ci workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,9 @@ jobs:
           name: Run format
           command: npm run format
       - run:
+          name: Run eslint
+          command: npm run lint
+      - run:
           name: Run tests
           command: npm test
 
