add e2e testing to CI workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,8 +33,11 @@ jobs:
           name: Run eslint
           command: npm run lint
       - run:
-          name: Run tests
+          name: Run unit tests
           command: npm test
+      - run:
+          name: Run e2e tests
+          command: npm test:e2e
 
 workflows:
   # Below is the definition of your workflow.
