--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@mikro-orm/core": "^5.2.0",
-    "@mikro-orm/nestjs": "^5.0.2",
-    "@mikro-orm/postgresql": "^5.2.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "typeorm": "^0.3.6",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
