--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ orbs:
   # Orbs reduce the amount of configuration required for common tasks.
   # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
   node: circleci/node@4.7
+  aws-ecr: circleci/aws-ecr@8.1.2
 
 jobs:
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
@@ -46,3 +47,13 @@ workflows:
       - build-and-test
       # For running simple node tests, you could optionally use the node/test job from the orb to replicate and replace the job above in fewer lines.
       # - node/test
+      - aws-ecr/build-and-push-image:
+                aws-access-key-id: AWS_ACCESS_KEY_ID 
+                aws-secret-access-key: AWS_SECRET_ACCESS_KEY 
+                docker-login: true 
+                dockerfile: Dockerfile 
+                dockerhub-password: DOCKERHUB_PASSWORD 
+                dockerhub-username: DOCKERHUB_USER 
+                region: AWS_DEFAULT_REGION
+                registry-id: DOCKERHUB_REGISTRY_ID 
+                repo: thrive    
