--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,32 +33,14 @@ jobs:
       - run:
           name: Run eslint
           command: npm run lint
+      # - run:
+      #     name: Run tests
+          # command: npm test
       - run:
-          name: Run tests
-          command: npm test
-  login-aws:
-      - run:
-          name: Login AWS
+          name: Login AWS ECR
           command: aws ecr get-login-password | docker login --username AWS --password-stdin ${AWS_ACCOUNT_ID}.dkr.ecr.us-west-2.amazonaws.com
 
-  # aws-ecr/build-and-push-image:
-  #   aws-access-key-id: AWS_ACCESS_KEY_ID 
-  #   aws-secret-access-key: AWS_SECRET_ACCESS_KEY 
-  #   docker-login: true 
-  #   dockerfile: Dockerfile 
-  #   dockerhub-password: DOCKERHUB_PASSWORD 
-  #   dockerhub-username: DOCKERHUB_USER 
-  #   region: ${AWS_DEFAULT_REGION}
-  #   registry-id: DOCKERHUB_REGISTRY_ID 
-  #   repo: thrive
-
 workflows:
-  # Below is the definition of your workflow.
-  # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
-  # CircleCI will run this workflow on every commit.
-  # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
   build-and-test:
     jobs:
       - build-and-test
-      - login-aws
-      # - aws-ecr/build-and-push-image
