--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,46 +1,50 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-orbs:
-  # The Node.js orb contains a set of prepackaged CircleCI configuration you can utilize
-  # Orbs reduce the amount of configuration required for common tasks.
-  # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
-  node: circleci/node@4.7
-  aws-ecr: circleci/aws-ecr@8.1.2
-
 jobs:
-  # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
-  build-and-test:
-    # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
-    # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/node
+  build:
     docker:
-      - image: cimg/node:16.10
-    # Then run your tests!
-    # CircleCI will report the results back to your VCS provider.
+      - image: circleci/python:3.9
+    working_directory: ~/repo
     steps:
-      # Checkout the code as the first step.
       - checkout
-      # Next, the node orb's install-packages step will install the dependencies from a package.json.
-      # The orb install-packages step will also automatically cache them for faster future runs.
-      - node/install-packages:
-          # If you are using yarn, change the line below from "npm" to "yarn"
-          pkg-manager: npm
+      - install-aws-venv
+      - setup_remote_docker:
+          docker_layer_caching: true
       - run:
-          name: Run format
-          command: npm run format
+          name: Setup common environment variables
+          command: |
+            echo 'export FULL_IMAGE_NAME="${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/alicehccn/thrive:${CIRCLE_BRANCH}-${CIRCLE_SHA1}"' >> $BASH_ENV
       - run:
-          name: Run eslint
-          command: npm run lint
-      # - run:
-      #     name: Run tests
-          # command: npm test
+          name: Build image
+          command: |
+            echo $FULL_IMAGE_NAME
+            docker build -f .deployment/Dockerfile -t $FULL_IMAGE_NAME .
+
+      - push-docker-image
+
+commands:
+  install-aws-venv:
+    description: "Install AWS in venv"
+    steps:
       - run:
-          name: Login AWS ECR
-          command: aws ecr get-login-password | docker login --username AWS --password-stdin ${AWS_ACCOUNT_ID}.dkr.ecr.us-west-2.amazonaws.com
+          name: Install awscli
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install awscli>=1.16.116
+
+  push-docker-image:
+      description: "Push Docker Image"
+      steps:
+        - run:
+            name: Push image
+            command: |
+              . venv/bin/activate
+              eval $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
+              docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/alicehccn/thrive:$CIRCLE_BRANCH-$CIRCLE_SHA1
+
 
 workflows:
-  build-and-test:
+  version: 2.1
+  unit-build:
     jobs:
-      - build-and-test
+      - build
