--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,11 +30,12 @@ commands:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pip install awscli>=1.16.116
+            pip install awscli>=2.7.9
       - run:
           name: Login AWS ECR
           command: |
-            aws ecr get-login-password | docker login --username AWS --password-stdin 686971707721.dkr.ecr.us-west-2.amazonaws.com
+            docker login -u AWS -p $(aws ecr get-login-password --region us-west-2) 686971707721.dkr.ecr.us-west-2.amazonaws.com
+
 
   push-docker-image:
       description: "Push Docker Image"
