--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,55 +1,61 @@
 version: 2.1
+
+orbs:
+  # The Node.js orb contains a set of prepackaged CircleCI configuration you can utilize
+  # Orbs reduce the amount of configuration required for common tasks.
+  # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
+  node: circleci/node@4.7
+  # aws-ecr: circleci/aws-ecr@8.1.2
+
 jobs:
-  build:
+  # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
+  build-and-test:
+    # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
+    # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/node
     docker:
-      - image: circleci/python:3.9
-    working_directory: ~/repo
+      - image: cimg/node:16.10
+    # Then run your tests!
+    # CircleCI will report the results back to your VCS provider.
     steps:
+      # Checkout the code as the first step.
       - checkout
-      - install-aws-venv
-      - setup_remote_docker:
-          docker_layer_caching: true
+      # Next, the node orb's install-packages step will install the dependencies from a package.json.
+      # The orb install-packages step will also automatically cache them for faster future runs.
+      - node/install-packages:
+          pkg-manager: npm
       - run:
-          name: Setup common environment variables
-          command: |
-            echo 'export FULL_IMAGE_NAME="686971707721.dkr.ecr.us-west-2.amazonaws.com/alicehccn/thrive:${CIRCLE_BRANCH}-${CIRCLE_SHA1}"' >> $BASH_ENV
+          name: Run format
+          command: npm run format
       - run:
-          name: Build image
-          command: |
-            echo $FULL_IMAGE_NAME
-            docker build -f .deployment/Dockerfile -t $FULL_IMAGE_NAME .
+          name: Run eslint
+          command: npm run lint
 
-      - push-docker-image
+      # - run:
+      #     name: Run tests
+          # command: npm test
 
-commands:
-  install-aws-venv:
-    description: "Install AWS in venv"
-    steps:
       - run:
-          name: Install awscli
+          name: Install AWS CLI
           command: |
             python3 -m venv venv
             . venv/bin/activate
             pip install awscli>=2.7.9
+
       - run:
           name: Login AWS ECR
+          command: aws ecr get-login-password | docker login --username AWS --password-stdin ${AWS_ACCOUNT_ID}.dkr.ecr.us-west-2.amazonaws.com
+
+
+      - run:
+          name: Push image
           command: |
-            docker login -u AWS --password-stdin $(aws ecr get-login-password --region us-west-2) 686971707721.dkr.ecr.us-west-2.amazonaws.com
-
-
-  push-docker-image:
-      description: "Push Docker Image"
-      steps:
-        - run:
-            name: Push image
-            command: |
-              . venv/bin/activate
-              eval $(aws ecr get-login --region us-west-2 --no-include-email)
-              docker push 686971707721.dkr.ecr.us-west-2.amazonaws.com/alicehccn/thrive:$CIRCLE_BRANCH-$CIRCLE_SHA1
-
+            . venv/bin/activate
+            eval $(aws ecr get-login --region us-west-2 --no-include-email)
+            docker push 686971707721.dkr.ecr.us-west-2.amazonaws.com/alicehccn/thrive:$CIRCLE_BRANCH-$CIRCLE_SHA1
 
 workflows:
   version: 2.1
-  unit-build:
+  build-and-test:
     jobs:
-      - build
+      - build-and-test
