--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@ orbs:
   # Orbs reduce the amount of configuration required for common tasks.
   # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
   node: circleci/node@4.7
+  aws-cli: circleci/aws-cli@3.1.1
+
   # aws-ecr: circleci/aws-ecr@8.1.2
 
 jobs:
@@ -34,13 +36,6 @@ jobs:
       # - run:
       #     name: Run tests
           # command: npm test
-
-      - run:
-          name: Install AWS CLI
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install awscli>=2.7.9
 
       - run:
           name: Login AWS ECR
