--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
 
       - run:
           name: Install awscli
-          command: sudo apt-get install awscli
+          command: sudo apt install awscli
 
       - run:
           name: Login AWS ECR
