--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,20 +37,25 @@ jobs:
       #     name: Run tests
           # command: npm test
 
-      - run:
-          name: Install awscli
-          command: sudo apt install awscli
+      # - run:
+      #     name: Login AWS ECR
+      #     command: docker login -u AWS --password-stdin $(aws ecr get-login-password --region us-west-2) 686971707721.dkr.ecr.us-west-2.amazonaws.com
 
-      - run:
-          name: Login AWS ECR
-          command: docker login -u AWS --password-stdin $(aws ecr get-login-password --region us-west-2) 686971707721.dkr.ecr.us-west-2.amazonaws.com
+      # - run:
+      #     name: Push image
+      #     command: |
+      #       . venv/bin/activate
+      #       eval $(aws ecr get-login --region us-west-2 --no-include-email)
+      #       docker push 686971707721.dkr.ecr.us-west-2.amazonaws.com/alicehccn/thrive:$CIRCLE_BRANCH-$CIRCLE_SHA1
 
-      - run:
-          name: Push image
-          command: |
-            . venv/bin/activate
-            eval $(aws ecr get-login --region us-west-2 --no-include-email)
-            docker push 686971707721.dkr.ecr.us-west-2.amazonaws.com/alicehccn/thrive:$CIRCLE_BRANCH-$CIRCLE_SHA1
+
+    aws-cli-example:
+      executor: aws-cli/default
+      steps:
+        - checkout
+        - aws-cli/setup:
+            profile-name: example
+        - run: echo "Run your code here"
 
 workflows:
   version: 2.1
