--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
             profile-name: example
         - run:
             name: Login AWS ECR
-            command: docker login
+            command: docker login -u AWS -p $(aws configure) 686971707721.dkr.ecr.us-west-2.amazonaws.com
 
 
 workflows:
