--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,5 +63,7 @@ commands:
             name: Push image
             command: |
               . venv/bin/activate
-              eval $(aws ecr get-login-password --region us-west-2)
+              eval $(aws ecr get-login-password --region ${AWS_DEFAULT_REGION})
+
+              docker login -u AWS --password-stdin $(aws ecr get-login-password --region ${AWS_DEFAULT_REGION}) ${AWS_ACCOUNT_ID}.dkr.ecr.us-west-2.amazonaws.com
               docker push $FULL_IMAGE_NAME
