try a different yaml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,5 +62,8 @@ commands:
         - run:
             name: Push image
             command: |
+              python3 -m venv venv
+              . venv/bin/activate
               docker login -u AWS --password-stdin $(aws ecr get-login-password --region ${AWS_DEFAULT_REGION}) ${AWS_ACCOUNT_ID}.dkr.ecr.us-west-2.amazonaws.com
+        
               docker push $FULL_IMAGE_NAME
