--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,5 @@ commands:
             name: Push image
             command: |
               . venv/bin/activate
-              docker login -u AWS -p $(aws ecr get-login-password --region ${AWS_DEFAULT_REGION}) ${AWS_ACCOUNT_ID}.dkr.ecr.us-west-2.amazonaws.com
-        
+              eval $(aws ecr get-login-password --region ${AWS_DEFAULT_REGION})
               docker push $FULL_IMAGE_NAME
