--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,5 +63,5 @@ commands:
             name: Push image
             command: |
               . venv/bin/activate
-              aws ecr get-login-password | docker login -u AWS -p-stdin 686971707721.dkr.ecr.us-west-2.amazonaws.com
+              docker login -u ${DOCKERHUB_USER} -p ${DOCKERHUB_PASSWORD}
               
