--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,5 +63,5 @@ commands:
             name: Push image
             command: |
               . venv/bin/activate
-              aws ecr-public get-login-password --region us-east-1 | docker login -u AWS -p-stdin public.ecr.aws/q9q5y0u8
+              aws ecr-public get-login-password --region us-east-1 | docker login -u AWS -p-stdin public.ecr.aws/q9q5y0u8/thrive
               
