--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,9 +64,7 @@ commands:
             command: |
               . venv/bin/activate
               docker login -u ${DOCKERHUB_USER} -p ${DOCKERHUB_PASSWORD}
-        # - run:
-        #     name: Push Image
-        #     command: |
-            
-
-  
+        - run:
+            name: Docker Build
+            command: |
+              docker build -t thrive .
