--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true
       - checkout
-      # - install-aws-venv
+      - install-aws-venv
       # - setup-env-variables
       # - build-docker-image
       - push-docker-image
