--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ commands:
             name: Docker Login
             command: |
               . venv/bin/activate
-              docker login -u ${DOCKERHUB_USER} -p ${DOCKERHUB_PASSWORD}
+              aws ecr get-login-password --region us-east-1 | docker login -u AWS -p-stdin 686971707721.dkr.ecr.us-east-1.amazonaws.com
         - run:
             name: Docker Build
             command: |
@@ -71,9 +71,9 @@ commands:
         - run:
             name: Docker Tag
             command: |
-              docker tag thrive:latest public.ecr.aws/q9q5y0u8/thrive:latest
+              docker tag thrive:latest 686971707721.dkr.ecr.us-east-1.amazonaws.com/thrive
         - run:
             name: Docker Push
             command: |
-              docker push public.ecr.aws/q9q5y0u8/thrive:latest
+              docker push 686971707721.dkr.ecr.us-east-1.amazonaws.com/thrive
 
