--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ commands:
             name: Docker Login
             command: |
               . venv/bin/activate
-              aws ecr get-login-password --region us-east-1 | docker login -u AWS -p-stdin 686971707721.dkr.ecr.us-east-1.amazonaws.com
+              aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 686971707721.dkr.ecr.us-east-1.amazonaws.com
         - run:
             name: Docker Build
             command: |
