fixing docker-compose for db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   nestjs:
     build: 
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: ./deployment/Dockerfile
     image: tusharchy/nest-and-postgres-application:latest
     environment: 
       - DB_TYPE=${DB_TYPE}
