--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services: 
   db:
-    image: postgres
+    image: postgres:9.3
     restart: always
     environment: 
       - POSTGRES_USER=${DATABASE_USER}
@@ -13,8 +13,8 @@ services:
   nestjs:
     build: 
       context: .
-      dockerfile: ./deployment/Dockerfile
-    image: tusharchy/nest-and-postgres-application:latest
+      dockerfile: .deployment/Dockerfile
+    image: alicehccn/thrive:latest
     environment: 
       - DB_TYPE=${DB_TYPE}
       - POSTGRES_HOST=${POSTGRES_HOST}
@@ -28,7 +28,7 @@ services:
       - APP_PORT=${APP_PORT}
     ports: 
       - "3000:3000" # expose-to-the-world : only-in-the-docker
-    container_name: nest-todo-app-be
+    container_name: thrive
     depends_on: 
       - db
     volumes: 
@@ -43,7 +43,7 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
       - PGADMIN_LISTEN_PORT=${PGADMIN_LISTEN_PORT}
     ports: 
-      - "5432:80"
+      - "3306:5432"
     volumes: 
       - ./pgadmin-data:/var/lib/pgadmin
     depends_on: 
