working verion, to be cleaned up

--- a/.env
+++ b/.env
@@ -1,15 +1,16 @@
 DB_TYPE=postgres
 POSTGRES_HOST=postgres-db
 POSTGRES_PORT=5432
-DATABASE_USER=postgres
-DATABASE_PASSWORD=postgres
-DB_NAME=tododb
+POSTGRES_PASS=pass123
+DATABASE_USER=admin
+DATABASE_PASSWORD=pass123
+DB_NAME=thrive
 POSTGRES_USER=postgres
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-JWT_SECRET=anyKey
+DB_USERNAME=admin
+DB_PASSWORD=pass123
+JWT_SECRET=jwt123
 APP_EXPIRES=3600
 PGADMIN_DEFAULT_EMAIL=postgres@mail.com
-PGADMIN_DEFAULT_PASSWORD=admin12
+PGADMIN_DEFAULT_PASSWORD=sophia
 PGADMIN_LISTEN_PORT=80
 APP_PORT=3000
