--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 services: 
   db:
-    image: postgres:9.3
+    image: postgres:9.3-alpine
     restart: always
     environment: 
       - POSTGRES_USER=alicehuang
-      - POSTGRES_PASSWORD=
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=thrive
     container_name: postgres-db
     volumes:
@@ -22,7 +22,7 @@ services:
       - DB_USERNAME=alicehuang
       - POSTGRES_PASS=
       - POSTGRES_DB=thrive
-      - POSTGRES_SYNC=true # should be false in prod
+      - POSTGRES_SYNC=false
       - JWT_SECRET=${JWT_SECRET}
       - POSTGRES_PORT=${POSTGRES_PORT}
       - APP_EXPIRES=${APP_EXPIRES}
@@ -47,6 +47,7 @@ services:
       - "3306:5432"
     volumes: 
       - ./pgadmin-data:/var/lib/pgadmin
+      - ./OrthancButterFlyIndex:/var/lib/postgresql/data
     depends_on: 
       - db
 volumes:
