--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,24 @@
-version: '3'
-services: 
+version: '3.8'
+services:
   db:
-    image: postgres:9.3-alpine
-    restart: always
-    environment: 
-      - POSTGRES_USER=alicehuang
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=thrive
-    container_name: postgres-db
+    image: postgres:latest
     volumes:
       - ./pgdata:/var/lib/postgresql/data
-  nestjs:
-    build: 
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - 5432:5432
+  app:
+    build:
       context: .
       dockerfile: ./Dockerfile
     image: alicehccn/thrive:latest
-    environment: 
-      - DB_TYPE=${DB_TYPE}
-      - POSTGRES_HOST=${POSTGRES_HOST}
-      - POSTGRES_USERNAME=alicehuang
-      - DB_USERNAME=alicehuang
-      - POSTGRES_PASS=
-      - POSTGRES_DB=thrive
-      - POSTGRES_SYNC=false
-      - JWT_SECRET=${JWT_SECRET}
-      - POSTGRES_PORT=${POSTGRES_PORT}
-      - APP_EXPIRES=${APP_EXPIRES}
-      - APP_PORT=${APP_PORT}
-    ports: 
-      - "3000:3000" # expose-to-the-world : only-in-the-docker
-    container_name: thrive
-    depends_on: 
+    ports:
+      - 3000:3000
+    environment:
+      - POSTGRES_PORT=5432
+      - PGUSER=postgres
+      - PGPASSWORD=postgres
+    depends_on:
       - db
-    volumes: 
-      - .:/app
-      - /app/node_modules
-  pgadmin:
-    image: dpage/pgadmin4
-    restart: always
-    container_name: nest-pgadmin4
-    environment: 
-      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
-      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
-      - PGADMIN_LISTEN_PORT=${PGADMIN_LISTEN_PORT}
-    ports: 
-      - "3306:5432"
-    volumes: 
-      - ./pgadmin-data:/var/lib/pgadmin
-      - ./OrthancButterFlyIndex:/var/lib/postgresql/data
-    depends_on: 
-      - db
-volumes:
-  pgdata:
-  pgadmin-data:
-  
