--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ workflows:
                 - main
           context:
             - docker-hub-creds
-            - alicehccn
+            - aws-config
 
 commands:
   install-aws-venv:
