use a different node image for CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
 
   lint-and-test:
     docker:
-      - image: circleci/node:alpine
+      - image: cimg/node:18.4.0
     working_directory: ~/repo
     steps:
       - checkout
