--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
       - image: cimg/node:18.4.0
     working_directory: ~/repo
     steps:
+      - checkout
       - run:
           name: Install Node Packages
           command: |
