--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/typeorm.config.ts",
     "typeorm:create": "npm run typeorm migration:create -- -n",
     "typeorm:generate": "npm run typeorm migration:generate -- -n",
-    "typeorm:run": "npm run typeorm migration:run",
+    "typeorm:run": "npm run typeorm migration:run -- -n",
     "typeorm:revert": "npm run typeorm migration:revert"
   },
   "dependencies": {
