--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+
 version: '3.8'
 services:
   db:
@@ -10,15 +11,14 @@ services:
     ports:
       - 5432:5432
   app:
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-    image: alicehccn/thrive:latest
+    image: 686971707721.dkr.ecr.us-east-1.amazonaws.com/thrive:latest
     ports:
       - 3000:3000
     environment:
       - POSTGRES_PORT=5432
+      - POSTGRES_HOST=ec2-54-189-51-69.us-west-2.compute.amazonaws.com
       - PGUSER=postgres
       - PGPASSWORD=postgres
     depends_on:
       - db
+    restart: always
