--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,12 @@ services:
     ports:
       - 5432:5432
   app:
-    image: 686971707721.dkr.ecr.us-east-1.amazonaws.com/thrive:latest
+    image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION_1.amazonaws.com/thrive:latest
     ports:
       - 3000:3000
     environment:
       - POSTGRES_PORT=5432
-      - POSTGRES_HOST=ec2-54-189-51-69.us-west-2.compute.amazonaws.com
+      - POSTGRES_HOST=$AWS_ACCOUNT_ID.$AWS_REGION_2.compute.amazonaws.com
       - PGUSER=postgres
       - PGPASSWORD=postgres
     depends_on:
