refactor docker file and compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,23 @@
-
-version: '3.8'
+version: "3.8"
 services:
-  app:
-    image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION_1.amazonaws.com/thrive:latest
+  api:
+    build:
+        dockerfile: Dockerfile
+        context: .
+    depends_on: 
+        - postgres
+    environment: 
+        DATABASE_URL: postgres://alicehuang:postgres@postgres:5432/db
+        NODE_ENV: development
+        PORT: 3000
     ports:
-      - 3000:3000
-    environment:
-      - POSTGRES_PORT=5432
-      - POSTGRES_HOST=$AWS_ACCOUNT_ID.$AWS_REGION_2.compute.amazonaws.com
-      - PGUSER=postgres
-      - PGPASSWORD=postgres
-    restart: always
+        - "8080:3000"
+
+  postgres:
+    image: postgres:latest
+    ports:
+        - "35000:5432"
+    environment: 
+        POSTGRES_USER: alicehuang
+        POSTGRES_PASSWORD: postgres
+        POSTGRES_DB: db
