--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
 version: "3.8"
 services:
   api:
-    build:
-        dockerfile: Dockerfile
-        context: .
+    image: alicehccn/thrive
     depends_on: 
         - postgres
     environment: 
-        DATABASE_URL: postgres://alicehuang:postgres@postgres:5432/db
+        DATABASE_URL: postgres://postgres:postgres@postgres:5432/db
         NODE_ENV: development
         PORT: 3000
     ports:
@@ -18,6 +16,6 @@ services:
     ports:
         - "35000:5432"
     environment: 
-        POSTGRES_USER: alicehuang
+        POSTGRES_USER: postgres
         POSTGRES_PASSWORD: postgres
         POSTGRES_DB: db
