--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thrive",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "MIT",
   "author": "Alice Huang <alicehccn@gmail.com>",
   "private": true,
@@ -18,10 +18,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test": "jest --config ./test/jest-e2e.json",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/typeorm.config.ts",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "typeorm:create": "npm run typeorm migration:create -- -n",
     "typeorm:generate": "npm run typeorm migration:generate -- -n",
-    "typeorm:run": "npm run typeorm migration:run -- -n",
+    "typeorm:run": "npm run typeorm migration:run --",
     "typeorm:revert": "npm run typeorm migration:revert"
   },
   "dependencies": {
