--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "typeorm:create": "npm run typeorm migration:create -- -n",
     "typeorm:generate": "npm run typeorm migration:generate -- -n",
     "typeorm:run": "npm run typeorm migration:run --",
-    "typeorm:revert": "npm run typeorm migration:revert"
+    "typeorm:revert": "npm run typeorm migration:revert --"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
