--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "typeorm:create": "npm run typeorm migration:create -- -n",
-    "typeorm:generate": "npm run typeorm migration:generate -- -n",
+    "typeorm:create": "npm run typeorm migration:create --",
+    "typeorm:generate": "npm run typeorm migration:generate --",
     "typeorm:run": "npm run typeorm migration:run --",
     "typeorm:revert": "npm run typeorm migration:revert --"
   },
